--- a/IAC.html
+++ b/IAC.html
@@ -10,72 +10,89 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <div class="rootpage">
-            <div class="rootpage-content">
-                <div class="rootpage-body">
-                    <h1>Project «IAC Chambers»</h1>
-                    <h2>Pages:</h2>
-                    <ol class="rootpage-pages">
-                        <li><a target="_blank" href="https://dimaakushnir.github.io/IAC-Chambers/">Home</a>
-                        </li>
-                        <li><a target="_blank"
-                                href="https://dimaakushnir.github.io/IAC-Chambers/about_iac_chambers.html">About IAC
-                                Chambers</a>
-                        </li>
-                        <li><a target="_blank" href="https://dimaakushnir.github.io/IAC-Chambers/team.html">Our team</a>
-                        </li>
-                        <li><a target="_blank"
-                                href="https://dimaakushnir.github.io/IAC-Chambers/services_and_facilities.html">Services
-                                and Facilities</a>
-                        </li>
-                        <li><a target="_blank"
-                                href="https://dimaakushnir.github.io/IAC-Chambers/testimonials.html">Testimonials</a>
-                        </li>
-                        <li><a target="_blank" href="https://dimaakushnir.github.io/IAC-Chambers/faqs.html">FAQS</a>
-                        </li>
-                        <li><a target="_blank" href="https://dimaakushnir.github.io/IAC-Chambers/media.html">Media and
-                                Events</a>
-                        </li>
-                        <li><a target="_blank"
-                                href="https://dimaakushnir.github.io/IAC-Chambers/training-centre_about-us.html">Training
-                                centre</a>
-                        </li>
-                        <li><a target="_blank"
-                                href="https://dimaakushnir.github.io/IAC-Chambers/online-course.html">Training
-                                programmes</a>
-                        </li>
-                        <li><a target="_blank" href="https://dimaakushnir.github.io/IAC-Chambers/ielts.html">Centre for
-                                English Language Learning</a>
-                        </li>
-                        <li><a target="_blank" href="https://dimaakushnir.github.io/IAC-Chambers/vis.html">Moots &
-                                Competitions</a>
-                        </li>
-                        <li><a target="_blank"
-                                href="https://dimaakushnir.github.io/IAC-Chambers/law-firm.html">Internships</a>
-                        </li>
-                        <li><a target="_blank"
-                                href="https://dimaakushnir.github.io/IAC-Chambers/training-centre.html">Training
-                                programmes</a>
-                        </li>
-                        <li><a target="_blank"
-                                href="https://dimaakushnir.github.io/IAC-Chambers/trainers.html">Trainers</a>
-                        </li>
-                        <li><a target="_blank"
-                                href="https://dimaakushnir.github.io/IAC-Chambers/training-centre_testimonials.html">Training
-                                centre Testimonials</a>
-                        </li>
-                        <li><a target="_blank"
-                                href="https://dimaakushnir.github.io/IAC-Chambers/contacts_services.html">Contacts</a>
-                        </li>
-                        <li><a target="_blank" href="https://dimaakushnir.github.io/IAC-Chambers/form.html">Make an
-                                Enquiry</a>
-                        </li>
-                    </ol>
+        <div class="wrapper">
+                <div class="rootpage">
+                        <div class="rootpage-content">
+                                <div class="rootpage-body">
+                                        <h1>Project «IAC Chambers»</h1>
+                                        <h2>Pages:</h2>
+                                        <ol class="rootpage-pages">
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/">Home</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/about_iac_chambers.html">About
+                                                                IAC
+                                                                Chambers</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/team.html">Our
+                                                                team</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/services_and_facilities.html">Services
+                                                                and Facilities</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/testimonials.html">Testimonials</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/faqs.html">FAQS</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/media.html">Media
+                                                                and
+                                                                Events</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/training-centre_about-us.html">Training
+                                                                centre</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/online-course.html">Training
+                                                                programmes</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/ielts.html">Centre
+                                                                for
+                                                                English Language Learning</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/vis.html">Moots
+                                                                &
+                                                                Competitions</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/law-firm.html">Internships</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/training-centre.html">Training
+                                                                programmes</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/trainers.html">Trainers</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/training-centre_testimonials.html">Training
+                                                                centre Testimonials</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/contacts_services.html">Contacts</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/form.html">Make
+                                                                an
+                                                                Enquiry</a>
+                                                </li>
+                                                <li><a target="_blank"
+                                                                href="https://dimaakushnir.github.io/IAC-Chambers/404.html">404
+                                                                Error</a>
+                                                </li>
+                                        </ol>
+                                </div>
+                        </div>
                 </div>
-            </div>
         </div>
-    </div>
 </body>
 
 </html>
